compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__suggest_wrapping_a_value_into_ok_with_generic_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2750
expression: "\npub fn first(list: List(a)) -> Result(a, Nil) {\n  case list {\n    [] -> Error(Nil)\n    [first, ..rest] -> first\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn first(list: List(a)) -> Result(a, Nil) {
  case list {
    [] -> Error(Nil)
    [first, ..rest] -> first
  }
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:5
  │
5 │     [first, ..rest] -> first
  │     ^^^^^^^^^^^^^^^^^^^^^^^^

This case clause was found to return a different type than the previous
one, but all case clauses must return the same type.

Expected type:

    Result(a, Nil)

Found type:

    a
