compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__true_fn.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 400
expression: let True(x) = 1
snapshot_kind: text
---
----- SOURCE CODE
let True(x) = 1

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let True(x) = 1
  │     ^^^^^^^

Expected type:

    Int

Found type:

    Bool

error: Incorrect arity
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let True(x) = 1
  │     ^^^^^^^ Expected no arguments, got 1
