compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__tuple_2_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 415
expression: "#(1, 2) == #(1, 2, 3)"
snapshot_kind: text
---
----- SOURCE CODE
#(1, 2) == #(1, 2, 3)

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:12
  │
1 │ #(1, 2) == #(1, 2, 3)
  │            ^^^^^^^^^^

Expected type:

    #(Int, Int)

Found type:

    #(Int, Int, Int)
