compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__tuple_arity.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 566
expression: "case #(1, 2) { #(1, _, _, _) -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case #(1, 2) { #(1, _, _, _) -> 1 }

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:16
  │
1 │ case #(1, 2) { #(1, _, _, _) -> 1 }
  │                ^^^^^^^^^^^^^ Expected 2 arguments, got 4
