compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__tuple_index_not_a_tuple.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 591
expression: Nil.2
snapshot_kind: text
---
----- SOURCE CODE
Nil.2

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:1
  │
1 │ Nil.2
  │ ^^^ This is not a tuple

To index into this value it needs to be a tuple, however it has this type:

    Nil
